@@ -9,6 +9,8 @@ apt (0.9.11) UNRELEASED; urgency=low
   * lp:~mvo/apt/config-clear:
     - support Configuration.Clear() for a clear of the entire 
       configuration
+  * lp:~mvo/apt/add-glob-function:
+    -  add Glob() to fileutl.{cc,h}
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 15 Aug 2013 09:27:35 +0200
 
